<resources>
    <string name="app_name">EcommPoc</string>
    <string name="label_empty_result">Oops, there are no results to display</string>
    <string name="label_error_result">Oops, there was an error fetching the data</string>
    <string name="button_try_again">Try again</string>
    <string name="menu_bottom_home">Home</string>
    <string name="menu_bottom_my_job">MyJobs</string>
    <string name="menu_bottom_support">Support</string>
    <string name="menu_bottom_news">News</string>
    <string name="menu_bottom_account">Account</string>

    <string name="hello_blank_fragment">Coming soon</string>

    <string name="txt_loading">Loading…</string>

    <string name="lbl_featured">Featured</string>
    <string name="lbl_what_is_new">What\'s news</string>
    <string name="lbl_learn_more">Learn more</string>
    <string name="lbl_good_afternoon"><![CDATA[Good afternoon, <b>Rahil!</b>]]></string>

    <string name="btn_confirm">Confirm</string>


    <string name="msg_error_address_null">Please choose your address!</string>
</resources>