<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_bottom_main"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rahil.ecommpoc.appUi.homePage.fragment.HomeFragment"
        android:label="@string/menu_bottom_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_jobs"
        android:name="com.rahil.ecommpoc.appUi.homePage.fragment.EmptyFragment"
        android:label="@string/menu_bottom_my_job"
        tools:layout="@layout/fragment_empty" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.rahil.ecommpoc.appUi.homePage.fragment.EmptyFragment"
        android:label="@string/menu_bottom_support"
        tools:layout="@layout/fragment_empty" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.rahil.ecommpoc.appUi.homePage.fragment.EmptyFragment"
        android:label="@string/menu_bottom_news"
        tools:layout="@layout/fragment_empty" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.rahil.ecommpoc.appUi.homePage.fragment.EmptyFragment"
        android:label="@string/menu_bottom_account"
        tools:layout="@layout/fragment_empty" />
</navigation>